--- a/food-products.html
+++ b/food-products.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="/food-products.html">Food Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html">About us</a>
             </li>
           </ul>
           <a class="navbar-btn btn btn-primary lift ms-auto" href="/contact.html">Contact now</a>
@@ -85,6 +85,18 @@
             <span class="card-meta pt-5">
               <hr class="card-meta-divider text-white">
               <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Garlic Bhadang 100g
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-garlic-500-single.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
                 Garlic Bhadang 200g
               </h5>
             </span>
@@ -103,19 +115,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-3 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-garlic-500-single.jpg);">
-          <div class="card-footer">
-            <span class="card-meta pt-5">
-              <hr class="card-meta-divider text-white">
-              <h5 class="text-uppercase text-white" style="font-weight: bold;">
-                Garlic Bhadang 1kg
-              </h5>
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-3 d-flex">
+      <!-- <div class="col-12 col-md-6 col-lg-3 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-garlic-500-single.jpg);">
           <div class="card-footer">
             <span class="card-meta pt-5">
@@ -126,7 +126,7 @@
             </span>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>      
     <div class="row p-5 m-5">
       <div class="col-12 col-md-6 col-lg-3 d-flex">
@@ -135,7 +135,19 @@
             <span class="card-meta pt-5">
               <hr class="card-meta-divider text-white">
               <h5 class="text-uppercase text-white" style="font-weight: bold;">
-                Jain Bhadang | Non-Garlic 200g
+                Jain Bhadang | Non-Garlic 100g
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-Non-garlic200g-single.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Jain Bhadang | Non Garlic Bhadang 200g
               </h5>
             </span>
           </div>
@@ -153,19 +165,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-3 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-Non-garlic200g-single.jpg);">
-          <div class="card-footer">
-            <span class="card-meta pt-5">
-              <hr class="card-meta-divider text-white">
-              <h5 class="text-uppercase text-white" style="font-weight: bold;">
-                Jain Bhadang | Non Garlic Bhadang 1kg
-              </h5>
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-3 d-flex">
+      <!-- <div class="col-12 col-md-6 col-lg-3 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-Non-garlic200g-single.jpg);">
           <div class="card-footer">
             <span class="card-meta pt-5">
@@ -176,7 +176,7 @@
             </span>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>      
 
     <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/food-1.jpg);">
@@ -189,7 +189,7 @@
             <!-- <p class="fs-lg text-white-80 mb-6 mb-md-8">
               We’ve already shipped ** number of orders to many countries.
             </p> -->
-            <a href="#!" class="btn btn-pill btn-primary lift">
+            <a href="/contact.html" class="btn btn-pill btn-primary lift">
               Contact now <i class="fe fe-arrow-right ms-2"></i>
             </a>
           </div>
@@ -203,8 +203,8 @@
         <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>      </div>
     </div>
 
-     <!-- FOOTER -->
-     <footer class="py-8 py-md-11 bg-dark">
+    <!-- FOOTER -->
+    <footer class="py-8 py-md-11 bg-dark">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3">
@@ -245,7 +245,7 @@
                 </a>
               </li>
               <h6 class="fw-bold text-uppercase text-gray-700">
-                Official Partner
+                Official Partners
               </h6>
               
                 <li class="mb-3">
@@ -266,8 +266,13 @@
             </h6>
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
+                <a href="/index.html" class="text-reset">
+                  Home
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="/about.html" class="text-reset">
-                  About
+                  About us
                 </a>
               </li>
               <li class="mb-3">
@@ -295,12 +300,12 @@
               <li class="mb-3">
                 <span class="text-reset">
                   <i class="bi bi-envelope-at"></i>
-                  <a href="mailto:contact@magoint.com">contact@magoint.com</a>
+                  <a href="mailto:contact@magoint.com">info@magoint.com</a>
                 </span>
               </li>
               <li class="mb-3">
                 <span class="text-reset">
-                  <i class="bi bi-whatsapp"></i>
+                  <i class="bi bi-whatsapp" style="color: #25d366;"></i>
                   <a href="tel:+919665863311">+91 9665863311</a> | <a href="tel:+919665863311">+91 9730667744</a>
                 </span>
               </li>
@@ -309,6 +314,20 @@
         </div>
       </div>
     </footer>
+
+    <footer class="copyright py-4">
+      <div class="container text-center">
+        <h2 class="logo"><a href="index.html">MAGO International EXIM</a></h2>
+        <div class="middle copyright">
+          <p>© Copyright 2023 MAGO International EXIM. All Rights Reserved</p>
+          <p>Design & Developed by<a href="https://liketrex.com/" target="_blank"> Liketrex Technology </a></p>
+        </div>
+      </div>
+      <style scoped>
+        .copyright h2{margin: 0;line-height: normal;}.copyright a{font-weight: bold;text-decoration: none;}.copyright p{margin: 0;text-decoration: none;}.copyright{background-color: #212529;margin: 0;color: #777;letter-spacing: .5px;}
+      </style>
+    </footer> 
+
     <script src='../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
     <script src="assets/js/vendor.bundle.js"></script>
     <script src="assets/js/theme.bundle.js"></script>
