--- a/help-center.html
+++ b/help-center.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="/food-products.html">Food Products</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html">About us</a>
             </li>
           </ul>
           <a class="navbar-btn btn btn-primary lift ms-auto" href="/contact.html">Contact now</a>
@@ -166,7 +166,7 @@
                 <div class="accordion-collapse collapse" id="Q5" aria-labelledby="Q5Heading">
                   <div class="accordion-body">
                     <p class="text-gray-700">
-                      Yes, we can send the samples for free, but the customer should bear the courier fee.
+                      Yes, we can send the samples for free, but the customer should bear the courier charges.
                     </p>
                   </div>
                 </div>
@@ -229,7 +229,7 @@
                 </a>
               </li>
               <h6 class="fw-bold text-uppercase text-gray-700">
-                Official Partner
+                Official Partners
               </h6>
               
                 <li class="mb-3">
@@ -250,8 +250,13 @@
             </h6>
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
+                <a href="/index.html" class="text-reset">
+                  Home
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="/about.html" class="text-reset">
-                  About
+                  About us
                 </a>
               </li>
               <li class="mb-3">
@@ -279,12 +284,12 @@
               <li class="mb-3">
                 <span class="text-reset">
                   <i class="bi bi-envelope-at"></i>
-                  <a href="mailto:contact@magoint.com">contact@magoint.com</a>
+                  <a href="mailto:contact@magoint.com">info@magoint.com</a>
                 </span>
               </li>
               <li class="mb-3">
                 <span class="text-reset">
-                  <i class="bi bi-whatsapp"></i>
+                  <i class="bi bi-whatsapp" style="color: #25d366;"></i>
                   <a href="tel:+919665863311">+91 9665863311</a> | <a href="tel:+919665863311">+91 9730667744</a>
                 </span>
               </li>
@@ -293,6 +298,20 @@
         </div>
       </div>
     </footer>
+
+    <footer class="copyright py-4">
+      <div class="container text-center">
+        <h2 class="logo"><a href="index.html">MAGO International EXIM</a></h2>
+        <div class="middle copyright">
+          <p>© Copyright 2023 MAGO International EXIM. All Rights Reserved</p>
+          <p>Design & Developed by<a href="https://liketrex.com/" target="_blank"> Liketrex Technology </a></p>
+        </div>
+      </div>
+      <style scoped>
+        .copyright h2{margin: 0;line-height: normal;}.copyright a{font-weight: bold;text-decoration: none;}.copyright p{margin: 0;text-decoration: none;}.copyright{background-color: #212529;margin: 0;color: #777;letter-spacing: .5px;}
+      </style>
+    </footer> 
+
     <script src='../api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
     <script src="assets/js/vendor.bundle.js"></script>
     <script src="assets/js/theme.bundle.js"></script>
